--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,11 +9,11 @@
          
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
-              routerLink="cart">Working Hours</a>
+              routerLink="/addmployee">Add Employee</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
-              routerLink="/products">Payment Rules</a>
+              routerLink="/employeedetails">Employee Detailes </a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
