--- a/src/app/components/employees/editemployee/editemployee.component.html
+++ b/src/app/components/employees/editemployee/editemployee.component.html
@@ -34,6 +34,12 @@
                 <label for="address" class="form-label">Address</label>
                 <input type="text" class="form-control" id="department"
                 name="address"[(ngModel)]="employeeDetails.address" >
+                <div class="mb-3">
+                  <label for="designationId" class="form-label">DesignationID</label>
+                  <input type="number" class="form-control" id="designationId" 
+                  name="designationId"[(ngModel)]="employeeDetails.designationId">
+                </div>
+                
               </div>
             <button type="submit" class="btn btn-primary" (click)="updateEmployee()">Save</button>
             <button type="button" class="btn btn-danger"(click)="deleteEmployee(employeeDetails.id)">Delete</button>
