--- a/src/app/components/employees/add-employee/add-employee.component.html
+++ b/src/app/components/employees/add-employee/add-employee.component.html
@@ -37,7 +37,7 @@
               </div>
               <div class="mb-3">
                 <label for="memberSince" class="form-label">Member Since</label>
-                <input type="date" class="form-control" id="designationId"
+                <input type="date" class="form-control" id="memberSince"
                 name="memberSince" [(ngModel)]="addEmployeeRequest.memberSince" >
               </div>
             <button type="submit" class="btn btn-primary">Save</button>
