--- a/src/app/components/designation/adddesignation/adddesignation.component.html
+++ b/src/app/components/designation/adddesignation/adddesignation.component.html
@@ -1,1 +1,30 @@
-<p>adddesignation works!</p>
+<div class="container my-5">
+    <h1 class="mb-3">Add Designation </h1>
+    <div class="row">
+        <div class="col-6">
+        <form (ngSubmit)="addDesignation()">
+            
+            <div class="mb-3">
+              <label for="name" class="form-label">Designation Name</label>
+              <input type="text" class="form-control" id="name"
+              name="name" [(ngModel)]="addDesignationRequest.designationName">
+            </div>
+            <div class="mb-3">
+                <label for="departmentName" class="form-label">Department Name</label>
+                <input type="text" class="form-control" id="departmentName" 
+                name="departmentName" [(ngModel)]="addDesignationRequest.departmentName">
+              </div>
+              <div class="mb-3">
+                <label for="roleName" class="form-label">Role</label>
+                <input type="text" class="form-control" id="roleName" 
+                name="roleName" [(ngModel)]="addDesignationRequest.roleName">
+              </div>
+
+              
+            <button type="submit" class="btn btn-primary">Save</button>
+          </form>  
+                      
+        </div>
+    </div>
+</div>
+<router-outlet></router-outlet>
