--- a/src/app/components/designation/designationdetails/designationdetails.component.html
+++ b/src/app/components/designation/designationdetails/designationdetails.component.html
@@ -1,5 +1,6 @@
 <div class="container my-5">
-    <h1 class="mb-3">Employees</h1>
+    <h1 class="mb-3">Designations    <h3><a [routerLink]="['/adddesignation']">Add</a></h3></h1>
+    
     <table class="table" *ngIf="DesignationDetails && DesignationDetails.length > 0">
         <thead>
             <tr>
@@ -11,12 +12,11 @@
         </thead>
         <tbody>
             <tr *ngFor="let Designation of DesignationDetails">
-                <td>{{Designation.designationId}}</td>
-                
+                <td>{{Designation.designationID}}</td>
                 <td>{{Designation.designationName}}</td>
                 <td>{{Designation.departmentName}}</td>
                 <td>{{Designation.roleName}}</td>
-                <td><a [routerLink]="['/designation','edit',Designation.designationId]">View</a></td>
+                <td><a [routerLink]="['/designation','edit',Designation.designationID]">View</a></td>
             </tr>
         </tbody>
     </table>
