--- a/src/app/components/employees/editemployee/editemployee.component.html
+++ b/src/app/components/employees/editemployee/editemployee.component.html
@@ -32,7 +32,7 @@
               </div>
               <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <input type="text" class="form-control" id="department"
+                <input type="text" class="form-control" id="address"
                 name="address"[(ngModel)]="employeeDetails.address" >
                 <div class="mb-3">
                   <label for="designationId" class="form-label">DesignationID</label>
