--- a/src/app/components/employees/employeedetails/employeedetails.component.html
+++ b/src/app/components/employees/employeedetails/employeedetails.component.html
@@ -5,15 +5,18 @@
             <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Email</th>
             <th>Phone</th>
-            <th>Gender</th>
             <th>Address</th>
-            <th>Member Since</th>
+            <th>Email</th>
+            
+            <th>Gender</th>
             <th>DesignationId</th>
+            
+           
             <th>Designation Name</th>
             <th>Department Name</th>
             <th>Role Name</th>
+            <th>Member Since</th>
             <th></th>
 
             </tr>
@@ -22,15 +25,18 @@
             <tr *ngFor="let Employee of EmployeeDetails">
                 <td>{{Employee.id}}</td>
                 <td>{{Employee.employeeName}}</td>
-                <td>{{Employee.email}}</td>
                 <td>{{Employee.phoneNumber}}</td>
-                <td>{{Employee.gender}}</td>
                 <td>{{Employee.address}}</td>
-                <td>{{Employee.memberSince}}</td>
-                <td>{{Employee.designationId}}</td>
+                <td>{{Employee.email}}</td>
+                
+                <td>{{Employee.gender}}</td>
+                <td>{{Employee.designationID}}</td>
+                
+                
                 <td>{{Employee.designationName}}</td>
                 <td>{{Employee.departmentName}}</td>
                 <td>{{Employee.roleName}}</td>
+                <td>{{Employee.memberSince}}</td>
                 <td><a [routerLink]="['/employee','edit',Employee.id]">View</a></td>
             </tr>
         </tbody>
