--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,6 +27,10 @@
               <a class="nav-link active" aria-current="page" 
               routerLink="/products">Request Leave</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" 
+              routerLink="/designationdetails">Designation</a>
+            </li>
         
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" 
