working hours added

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
          
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
-              routerLink="/addmployee">Add Employee</a>
+              routerLink="/workinghours">Working Hours</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
