--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,7 +25,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
-              routerLink="/products">Request Leave</a>
+              routerLink="/requestleavedetails">Request Leave</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
