--- a/src/app/components/employees/editemployee/editemployee.component.html
+++ b/src/app/components/employees/editemployee/editemployee.component.html
@@ -2,7 +2,7 @@
     <h1 class="mb-3">Edit Employee </h1>
     <div class="row">
         <div class="col-6">
-        <form #form="ngForm" (ngSubmit)="updateEmployee">
+        <form  (ngSubmit)="updateEmployee">
             <div class="mb-3">
                 <label for="id" class="form-label">Id</label>
                 <input type="number" class="form-control" id="id" readonly
