--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
-              routerLink="/products">Company Rules</a>
+              routerLink="/paymentrulesdetails">Payment Rules</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
