--- a/src/app/components/designation/editdesignation/editdesignation.component.html
+++ b/src/app/components/designation/editdesignation/editdesignation.component.html
@@ -2,7 +2,7 @@
     <h1 class="mb-3">Edit Designation </h1>
     <div class="row">
         <div class="col-6">
-        <form #form="ngForm" (ngSubmit)="updateDesignation">
+        <form  (ngSubmit)="updateDesignation">
             <div class="mb-3">
                 <label for="id" class="form-label">Designation Id</label>
                 <input type="number" class="form-control" id="id" readonly
