--- a/src/app/components/requestleave/addrequestleave/addrequestleave.component.html
+++ b/src/app/components/requestleave/addrequestleave/addrequestleave.component.html
@@ -2,7 +2,7 @@
     <h1 class="mb-3">Add Designation </h1>
     <div class="row">
         <div class="col-6">
-        <form #form="ngForm" (ngSubmit)="addLeave()">
+        <form  (ngSubmit)="addLeave()">
             <div class="mb-3">
               <label for="employeeID" class="form-label">Employee ID</label>
               <input type="number" class="form-control" id="employeeID"
