--- a/src/app/components/requestleave/editrequestleave/editrequestleave.component.html
+++ b/src/app/components/requestleave/editrequestleave/editrequestleave.component.html
@@ -3,7 +3,7 @@
     <h1 class="mb-3">Edit Leave </h1>
     <div class="row">
         <div class="col-6">
-        <form #form="ngForm" (ngSubmit)="updateLeave">
+        <form  (ngSubmit)="updateLeave">
             <div class="mb-3">
                 <label for="leaveID" class="form-label">Leave Id</label>
                 <input type="number" class="form-control" id="leaveID" readonly
