--- a/src/app/components/workinghours/editworkinghours/editworkinghours.component.html
+++ b/src/app/components/workinghours/editworkinghours/editworkinghours.component.html
@@ -2,7 +2,7 @@
     <h1 class="mb-3">Edit WorkingHours </h1>
     <div class="row">
         <div class="col-6">
-        <form #form="ngForm" (ngSubmit)="updateWorkingHours">
+        <form  (ngSubmit)="updateWorkingHours">
             <div class="mb-3">
                 <label for="id" class="form-label">ID</label>
                 <input type="number" class="form-control" id="id" readonly
