unit testing done

--- a/src/app/components/designation/editdesignation/editdesignation.component.html
+++ b/src/app/components/designation/editdesignation/editdesignation.component.html
@@ -24,8 +24,8 @@
                 <input type="text" class="form-control" id="roleName" 
                 name="roleName"[(ngModel)]="designationDetails.roleName">
               </div>
-            <button type="submit" class="btn btn-primary" (click)="updateDesignation()">Save</button>
-            <button type="button" class="btn btn-danger"(click)="deleteDesignation(designationDetails.designationID)">Delete</button>
+            <button type="submit" class="btn btn-primary" style="margin:5px"(click)="updateDesignation()">Save</button>
+            <button type="button" class="btn btn-danger" style="margin:5px"(click)="deleteDesignation(designationDetails.designationID)">Delete</button>
           </form>  
                       
         </div>
