--- a/src/app/components/employees/add-employee/add-employee.component.html
+++ b/src/app/components/employees/add-employee/add-employee.component.html
@@ -31,9 +31,9 @@
                 name="gender" [(ngModel)]="addEmployeeRequest.gender" >
               </div>
               <div class="mb-3">
-                <label for="designationId" class="form-label">DesignationId</label>
-                <input type="number" class="form-control" id="designationId"
-                name="designationId" [(ngModel)]="addEmployeeRequest.designationId" >
+                <label for="designationID" class="form-label">DesignationId</label>
+                <input type="number" class="form-control" id="designationID"
+                name="designationID" [(ngModel)]="addEmployeeRequest.designationID" >
               </div>
               <div class="mb-3">
                 <label for="memberSince" class="form-label">Member Since</label>
