--- a/src/app/components/paymentrules/payment-rule-details/payment-rule-details.component.html
+++ b/src/app/components/paymentrules/payment-rule-details/payment-rule-details.component.html
@@ -1,3 +1,13 @@
+<nav>
+    <img src="">
+    <ul>
+        <li><a href="/employeedetails">Employee Details</a></li>
+        <li><a href="/designationdetails">Designation Details</a></li>
+        <li><a href="/workinghoursdetails">Working Hours</a></li>
+        <li><a href="/requestleavedetails">Request Leave</a></li>
+        <li><a href="/paymentrulesdetails">Payment Rules</a></li>
+    </ul>
+</nav>
 
 <div class="container my-5">
     <h1 class="mb-3">Payment Rules</h1>
