--- a/src/app/components/requestleave/editrequestleave/editrequestleave.component.html
+++ b/src/app/components/requestleave/editrequestleave/editrequestleave.component.html
@@ -39,8 +39,8 @@
            
            
           
-            <button type="submit" class="btn btn-primary" (click)="updateLeave()">Save</button>
-            <button type="button" class="btn btn-danger"(click)="deleteLeave(requestleave.leaveID)">Delete</button>
+            <button type="submit" class="btn btn-primary"style="margin:5px" (click)="updateLeave()">Save</button>
+            <button type="button" class="btn btn-danger" style="margin:5px"(click)="deleteLeave(requestleave.leaveID)">Delete</button>
           </form>  
                       
         </div>
