--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
          
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
-              routerLink="/workinghours">Working Hours</a>
+              routerLink="/workinghoursdetails">Working Hours</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
@@ -18,10 +18,6 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
               routerLink="/paymentrulesdetails">Payment Rules</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" 
-              routerLink="/products">Holidays</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" 
@@ -39,4 +35,7 @@
       </ul>
     </div>
   </nav>
+  <div>
+    <img [src]="myimage" alt=""  >
+  </div>
   <router-outlet></router-outlet>
