--- a/src/app/components/paymentrules/edit-payment-rule/edit-payment-rule.component.html
+++ b/src/app/components/paymentrules/edit-payment-rule/edit-payment-rule.component.html
@@ -15,8 +15,8 @@
               name="paymentRule"[(ngModel)]="paymentrules.paymentRule">
             </div>
             
-            <button type="submit" class="btn btn-primary" (click)="updatePaymentRules()">Save</button>
-            <button type="button" class="btn btn-danger"(click)="deletePaymentRules(paymentrules.paymentID)">Delete</button>
+            <button type="submit" class="btn btn-primary" style="margin:5px"(click)="updatePaymentRules()">Save</button>
+            <button type="button" class="btn btn-danger" style="margin:5px"(click)="deletePaymentRules(paymentrules.paymentID)">Delete</button>
           </form>  
                       
         </div>
