--- a/src/app/components/requestleave/requestleavedetails/requestleavedetails.component.html
+++ b/src/app/components/requestleave/requestleavedetails/requestleavedetails.component.html
@@ -1,26 +1,61 @@
-<div class="container my-5">
-    <h2>Request Leave Management</h2>
-    <h3 class="mb-2 mb-lg-0"><a [routerLink]="['/addrequestleave']">Add</a></h3>
-</div>
+<nav>
+    <img src="">
+    <ul>
+        <li><a href="/employeedetails">Employee Details</a></li>
+        <li><a href="/designationdetails">Designation Details</a></li>
+        <li><a href="/workinghoursdetails">Working Hours</a></li>
+        <li><a href="/requestleavedetails">Request Leave</a></li>
+        <li><a href="/paymentrulesdetails">Payment Rules</a></li>
+    </ul>
+</nav>
+
 
 <div class="container my-5">
+    <h1 class="mb-3">Request Leave Management</h1>
+<div class="container">
+    <div class="center-dialog-vertically">
+    <a class="btn btn-sm text-white btn-primary"   [routerLink]="['/addrequestleave']">Request Leave &nbsp;<i class="bi bi-bag"></i></a>
+</div>
+</div>
+<div class="container mt-5">
+    <div class="form-group float-end text-right">
+        
+            <input type="text" name="Search" [(ngModel)]="searchText" placeholder="Search by EmploloyeeID,leaveID">
+       
+    </div>
+</div>
+<div class="container">
+    <div>
+        <h6>Show  <select (change)="onTableSizeChange($event)">
+            
+            <option *ngFor="let size of tablesize">
+               {{size}}
+            </option>
+        </select> Entities </h6>
+       
+    </div>
     
-    <table class="table" *ngIf="RequestLeave && RequestLeave.length > 0">
-        <thead>
+<div class="container my-5">
+    
+    <table class="table table-bordered" *ngIf="RequestLeave && RequestLeave.length > 0">
+        <thead class="bg-dark text-white"> 
             <tr>
+                <th>S.No</th>
             <th>Leave ID</th>
             <th>Employee ID</th>
             <th>Leave Type</th>
             <th>When</th>
             <th>Leave Reason</th>
             <th>Leave Status</th>
-            <th></th>   
-            <th></th>
+            <th style="text-align:center">Action</th>   
 
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let emp of RequestLeave">
+        <tr *ngFor="let emp of RequestLeave  |filter:searchText | paginate:{itemsPerPage:tableSize,
+            currentPage:page,
+            totalItems:count}; let i=index;let sr=index">
+            <td>{{sr+1}}</td>
             <td>{{emp.leaveID}}</td>
             <td>{{emp.employeeID}}</td>
             
@@ -28,10 +63,16 @@
             <td>{{emp.when}}</td>
             <td>{{emp.leaveReason}}</td>
             <td>{{emp.leaveStatus}}</td>
-            <td><a [routerLink]="['/requestleave','edit',emp.leaveID]">View</a></td>
+            <td style="text-align:center"><a class="btn btn-sm text-white btn-primary" style="margin:5px"[routerLink]="['/requestleave','edit',emp.leaveID]">View &nbsp;<i class="bi bi-bag"></i> </a>
+            <a class="btn btn-sm text-white btn-danger" style="margin:5px"[routerLink]="['/requestleave','edit',emp.leaveID]">Delete &nbsp;<i class="bi bi-bag"></i> </a></td>
 
         </tr>
     </tbody>
 </table>
+<pagination-controls
+previousLabel="Prev"
+nextLabel="Next"
+(pageChange)="onTableDataChange($event)"></pagination-controls>
+</div>
 <p *ngIf="!RequestLeave || RequestLeave.length<=0">No records found for Designation</p>
 </div>
