--- a/src/app/components/workinghours/editworkinghours/editworkinghours.component.html
+++ b/src/app/components/workinghours/editworkinghours/editworkinghours.component.html
@@ -24,8 +24,8 @@
                 <input type="number" class="form-control" id="employeeWorkingHours" 
                 name="employeeWorkingHours"[(ngModel)]="workingHourDetails.employeeWorkingHours">
               </div>
-            <button type="submit" class="btn btn-primary" (click)="updateWorkingHours()">Save</button>
-            <button type="button" class="btn btn-danger"(click)="deleteWorkingHours(workingHourDetails.hoursID)">Delete</button>
+            <button type="submit" class="btn btn-primary" style="margin:5px" (click)="updateWorkingHours()">Save</button>
+            <button type="button" class="btn btn-danger" style="margin:5px"(click)="deleteWorkingHours(workingHourDetails.hoursID)">Delete</button>
           </form>  
                       
         </div>
